Test changing content

--- a/translation/data/en.json
+++ b/translation/data/en.json
@@ -495,10 +495,10 @@
     "message": "We're very happy to be able to offer up to <b>$1000 USD in seed funding grants</b> for oustanding, and effective, animal rights activism! Specifically we're looking for individual or grassroots groups whose primary purpose is to help reduce suffering for non-human farmed animals."
   },
   "page.index.next-seo.title": {
-    "message": "<no-localization>Vegan Hacktivists</no-localization>"
+    "message": "<no-localization>Vegetarian Hacktivists</no-localization>"
   },
   "page.index.next-seo.title-template": {
-    "message": "<no-localization>%s | Compassion, Creativity, Code!</no-localization>"
+    "message": "<no-localization>%s | Cheese, Creativity, Code!</no-localization>"
   },
   "page.index.section.introduction.headline": {
     "message": "We are <no-localization><b>VEGAN HACKTIVISTS</b></no-localization>"
