--- a/translation/data/de.json
+++ b/translation/data/de.json
@@ -1635,7 +1635,7 @@
     "message": "Bisher war es sehr schwierig, die Wirksamkeit von Straßeneinsätzen zu verfolgen. Wir freuen uns über die Partnerschaft mit <no-localization>AV</no-localization>, die es uns ermöglicht, ihnen die Werkzeuge zur Verfügung zu stellen, die sie benötigen, um die Effektivität jeder Gruppe mit <link>Activist Hub</link> zu überwachen und zu verfolgen."
   },
   "page.year-in-review.2021.section.partnerships.intro.headline": {
-    "message": "Aufbau sinnvoller <b>Partnerschaften</b>"
+    "message": "Aufbau bedeutsamer <b>Partnerschaften</b>"
   },
   "page.year-in-review.2021.section.partnerships.intro.paragraph": {
     "message": "In diesem Jahr haben wir auf unsere bisherigen Partnerschaften zurückgeblickt und gemeinsam überlegt, wie unsere künftigen Partnerschaften zu effektiveren und dauerhafteren Beziehungen führen könnten. Wir wollten, dass sich unsere Partnerschaften komplexer gestalten und sowohl für die Partner als auch für uns mehr Wirkung zeigen."
