--- a/translation/data/en.json
+++ b/translation/data/en.json
@@ -1970,6 +1970,27 @@
   "page.year-in-review.2022.section.state-of-data.paragraph": {
     "message": "During the second half of the year, we launched the first-of-its-kind study on the state of data and technology in animal protection. With support and partnership from Faunalytics with the design of this study, our team of researchers are seeking to understand what are the challenges and opportunities among organizations working in various fields and industries within our broad movement. The forthcoming report will provide recommendations to stakeholders and help drive our organizational roadmap."
   },
+  "page.year-in-review.2023.next-seo.title": {
+    "message": "2023 in Review"
+  },
+  "page.year-in-review.2023.section.header.content": {
+    "message": "In <no-localization>2023</no-localization>, we strengthened our role as capacity builders, saving the movement the largest amount of funds in our history. By serving over <no-localization>130</no-localization> organizations this year alone with our tech, design, and advisory services, we managed to save the movement a staggering <no-localization>$750k</no-localization>. As we continue through <no-localization>2024</no-localization>, we maintain our focus on leveraging the solid foundation we've built in <no-localization>2023</no-localization> to continue addressing the existing gaps within our movement and making the animal advocacy space more powerful than before."
+  },
+  "page.year-in-review.2023.section.header.image.alt-text": {
+    "message": "2023 year in review"
+  },
+  "page.year-in-review.2023.section.header.title": {
+    "message": "Serving Our Movement with New Tools & Technology"
+  },
+  "page.year-in-review.2023.section.providing-value.we-built.paragraph": {
+    "message": "<b>2023 was the year we finalized projects long awaiting their spotlight.</b> We targeted vegans eager to get active for animals in their everyday lives and launched a tool that transformed grantmaking processes crucial for organizations to sustain and advance their work."
+  },
+  "page.year-in-review.2023.section.providing-value.we-committed.paragraph": {
+    "message": "<b>With shifts in our leadership and plans for new programs</b>, we dived into a new chapter at <no-localization>VH</no-localization>. This entailed welcoming a new Executive Director for <no-localization>VH</no-localization>, as well as preparing for the evolution of one of our teams into a realm of stronger branding and focus."
+  },
+  "page.year-in-review.2023.section.providing-value.we-ventured.paragraph": {
+    "message": "<b>We leaned into our strength of harnessing technology and building communities</b> to help animals, and shared our expertise across a multitude of events. From speaking about volunteer management to leading talks on utilizing AI in advocacy work, we stepped forward to ensure that more organizations could use this knowledge for change."
+  },
   "page.year-in-review.section.header.content": {
     "message": "We're so happy to release our <no-localization>{year}</no-localization> Year in Review! Scroll down to read all of our accomplishments thanks to your generous support, our partners, and most of all our amazing volunteers."
   },
