--- a/translation/data/en.json
+++ b/translation/data/en.json
@@ -1973,6 +1973,15 @@
   "page.year-in-review.2023.next-seo.title": {
     "message": "2023 in Review"
   },
+  "page.year-in-review.2023.section.granti.content": {
+    "message": "After conducting several interviews with major funders in the space, it was clear to us that a grantee/funder tool was well-needed in our movement. We tackled this issue head-on by building a tool that would allow better management and facilitation of grants for both advocates and funders alike. We were thrilled to onboard the first funders onto the platform, and publicly announced its launch at the end of the year!{break}{break}Grantees often struggle to keep track of their grant submissions, both current and past. Funders face similar challenges, as it's rare to have all the necessary information in one easy-to-understand and accessible format. Like grantees, funders deal with a lot of administrative work and often use multiple platforms to manage submissions. Our system, <no-localization>Granti</no-localization>, brings everyone together, simplifying the grant process for all.{break}{break}Since its launch, <no-localization>Granti</no-localization> has made a huge impact, helping distribute tens of millions of dollars. <no-localization>Granti</no-localization> makes everything easier—from handling applications to updating records and managing finances. It's become a powerful tool, and we intend to extend its use far beyond what we initially envisioned.{break}{break}<b>Are you a funder or grantmaker in the space? Looking for a streamlined way to manage your grants?</b>"
+  },
+  "page.year-in-review.2023.section.granti.heading": {
+    "message": "<b>GRANT-MAKING TURNED SIMPLE</b>"
+  },
+  "page.year-in-review.2023.section.granti.label": {
+    "message": "Reach our to join <no-localization>Granti</no-localization>"
+  },
   "page.year-in-review.2023.section.header.content": {
     "message": "In <no-localization>2023</no-localization>, we strengthened our role as capacity builders, saving the movement the largest amount of funds in our history. By serving over <no-localization>130</no-localization> organizations this year alone with our tech, design, and advisory services, we managed to save the movement a staggering <no-localization>$750k</no-localization>. As we continue through <no-localization>2024</no-localization>, we maintain our focus on leveraging the solid foundation we've built in <no-localization>2023</no-localization> to continue addressing the existing gaps within our movement and making the animal advocacy space more powerful than before."
   },
@@ -1990,6 +1999,12 @@
   },
   "page.year-in-review.2023.section.providing-value.we-ventured.paragraph": {
     "message": "<b>We leaned into our strength of harnessing technology and building communities</b> to help animals, and shared our expertise across a multitude of events. From speaking about volunteer management to leading talks on utilizing AI in advocacy work, we stepped forward to ensure that more organizations could use this knowledge for change."
+  },
+  "page.year-in-review.2023.section.violet-studios.content": {
+    "message": "Over time, we noticed several areas in need of capacity-building work, with design being at the forefront. Our design work expanded rapidly, taking on a life of its own—and became deserving of its own organization.{break}{break}We started working on the new program to help the movement shine brighter, aiming for the big launch on a special date—<no-localization>VH’s</no-localization> 5th anniversary. After careful preparations of everything that comes along with a launch of a new organization (its branding, strategy, website, and social media—the list goes on!), the team was all set for the launch on January 1st.{break}{break}Now, our sister organization, <no-localization>Violet Studios</no-localization>, continues to provide authentic design services for activists and organizations at no cost. Whether it’s branding, web design, or other high-impact areas, <no-localization>Violet</no-localization> is here to help advocates build trust, influence perceptions, and put their best foot forward.{break}{break}<b>Want to learn more?</b>"
+  },
+  "page.year-in-review.2023.section.violet-studios.heading": {
+    "message": "The launch of <b>Violet Studios</b>"
   },
   "page.year-in-review.section.header.content": {
     "message": "We're so happy to release our <no-localization>{year}</no-localization> Year in Review! Scroll down to read all of our accomplishments thanks to your generous support, our partners, and most of all our amazing volunteers."
