--- a/translation/data/en.json
+++ b/translation/data/en.json
@@ -1973,6 +1973,15 @@
   "page.year-in-review.2023.next-seo.title": {
     "message": "2023 in Review"
   },
+  "page.year-in-review.2023.section.fta.content": {
+    "message": "Towards the end of 2023, we were excited to introduce <no-localization>Today For Animals</no-localization>, a user-friendly web app that simplifies animal advocacy for everyone, from seasoned activists to newcomers. <no-localization>Today For Animals</no-localization> provides a spectrum of actions, from quick daily tasks to more challenging efforts, aimed at improving the lives of animals.{break}{break}Users can engage in \"micro-activism\" like leaving reviews for vegan eateries, sharing recipes, or signing petitions. Participants in the app earn recognition and climb the leaderboard as they complete tasks. They can also collect beautifully crafted badges for their profiles and maintain a daily activity streak by checking into the app each day. This gamified approach keeps our community engaged and helps everyone continuously contribute to animal advocacy.{break}{break}The launch of this project was met with great reception, and garnered 269 sign ups just within a couple of weeks. But we didn’t stop there! Our team is consistently improving the app, to keep the users curious, active, and motivated to make a difference even in the most mundane.{break}{break}<b>Have you helped the animals today?</b>"
+  },
+  "page.year-in-review.2023.section.fta.heading": {
+    "message": "<b>MAKING DAILY ACTIVISM FUN</b>"
+  },
+  "page.year-in-review.2023.section.fta.label": {
+    "message": "Head to <no-localization>Today For Animals</no-localization>"
+  },
   "page.year-in-review.2023.section.granti.content": {
     "message": "After conducting several interviews with major funders in the space, it was clear to us that a grantee/funder tool was well-needed in our movement. We tackled this issue head-on by building a tool that would allow better management and facilitation of grants for both advocates and funders alike. We were thrilled to onboard the first funders onto the platform, and publicly announced its launch at the end of the year!{break}{break}Grantees often struggle to keep track of their grant submissions, both current and past. Funders face similar challenges, as it's rare to have all the necessary information in one easy-to-understand and accessible format. Like grantees, funders deal with a lot of administrative work and often use multiple platforms to manage submissions. Our system, <no-localization>Granti</no-localization>, brings everyone together, simplifying the grant process for all.{break}{break}Since its launch, <no-localization>Granti</no-localization> has made a huge impact, helping distribute tens of millions of dollars. <no-localization>Granti</no-localization> makes everything easier—from handling applications to updating records and managing finances. It's become a powerful tool, and we intend to extend its use far beyond what we initially envisioned.{break}{break}<b>Are you a funder or grantmaker in the space? Looking for a streamlined way to manage your grants?</b>"
   },
@@ -1991,6 +2000,15 @@
   "page.year-in-review.2023.section.header.title": {
     "message": "Serving Our Movement with New Tools & Technology"
   },
+  "page.year-in-review.2023.section.playground.content": {
+    "message": "After the immense success of <no-localization>Playground</no-localization> since its launch in 2021, we continued to strive for ways to improve it. The platform, comprising over 2,500 vegan volunteers who have collectively contributed over thousands of hours of work for the movement, has established itself as the go-to place to connect with organizations.{break}{break}We witnessed the growth of <no-localization>Playground’s</no-localization> community by nearly 1,000 new volunteers, handling 93 diverse requests like data analysis and marketing in this year alone.{break}{break}In 2023, we decided to take <no-localization>Playground</no-localization> to the next level. We learned a lot and started working on implementing changes to enhance user experience. By providing more control for those seeking support, and a much more enjoyable (and even fun!) process for fulfilling requests, <no-localization>Playground's</no-localization> upgrade is set to boost both experience and impact for animals.{break}{break}<no-localization>Playground</no-localization> is separate from the <no-localization>Vegan Hacktivists</no-localization> team, and aims to increase the capacity in which we can support work for the animals. In preparation of <no-localization>Playground V2</no-localization>, we’ve released an introductory video about the current platform.{break}{break}<b>Haven’t seen the video yet?</b>"
+  },
+  "page.year-in-review.2023.section.playground.heading": {
+    "message": "<b>FROM STRENGTH TO STRENGTH</b>"
+  },
+  "page.year-in-review.2023.section.playground.label": {
+    "message": "Watch it here"
+  },
   "page.year-in-review.2023.section.providing-value.we-built.paragraph": {
     "message": "<b>2023 was the year we finalized projects long awaiting their spotlight.</b> We targeted vegans eager to get active for animals in their everyday lives and launched a tool that transformed grantmaking processes crucial for organizations to sustain and advance their work."
   },
@@ -1999,15 +2017,6 @@
   },
   "page.year-in-review.2023.section.providing-value.we-ventured.paragraph": {
     "message": "<b>We leaned into our strength of harnessing technology and building communities</b> to help animals, and shared our expertise across a multitude of events. From speaking about volunteer management to leading talks on utilizing AI in advocacy work, we stepped forward to ensure that more organizations could use this knowledge for change."
-  },
-  "page.year-in-review.2023.section.tfa.content": {
-    "message": "Towards the end of 2023, we were excited to introduce <no-localization>Today For Animals</no-localization>, a user-friendly web app that simplifies animal advocacy for everyone, from seasoned activists to newcomers. <no-localization>Today For Animals</no-localization> provides a spectrum of actions, from quick daily tasks to more challenging efforts, aimed at improving the lives of animals.{break}{break}Users can engage in \"micro-activism\" like leaving reviews for vegan eateries, sharing recipes, or signing petitions. Participants in the app earn recognition and climb the leaderboard as they complete tasks. They can also collect beautifully crafted badges for their profiles and maintain a daily activity streak by checking into the app each day. This gamified approach keeps our community engaged and helps everyone continuously contribute to animal advocacy.{break}{break}The launch of this project was met with great reception, and garnered 269 sign ups just within a couple of weeks. But we didn’t stop there! Our team is consistently improving the app, to keep the users curious, active, and motivated to make a difference even in the most mundane."
-  },
-  "page.year-in-review.2023.section.tfa.heading": {
-    "message": "<b>MAKING DAILY ACTIVISM FUN</b>"
-  },
-  "page.year-in-review.2023.section.tfa.label": {
-    "message": "Head to <no-localization>Today For Animals</no-localization>"
   },
   "page.year-in-review.2023.section.violet-studios.content": {
     "message": "Over time, we noticed several areas in need of capacity-building work, with design being at the forefront. Our design work expanded rapidly, taking on a life of its own—and became deserving of its own organization.{break}{break}We started working on the new program to help the movement shine brighter, aiming for the big launch on a special date—<no-localization>VH’s</no-localization> 5th anniversary. After careful preparations of everything that comes along with a launch of a new organization (its branding, strategy, website, and social media—the list goes on!), the team was all set for the launch on January 1st.{break}{break}Now, our sister organization, <no-localization>Violet Studios</no-localization>, continues to provide authentic design services for activists and organizations at no cost. Whether it’s branding, web design, or other high-impact areas, <no-localization>Violet</no-localization> is here to help advocates build trust, influence perceptions, and put their best foot forward.{break}{break}<b>Want to learn more?</b>"
